setzIndex works, but it will technically overflow if you click enough times. I could avoid it by comparing the z index first and then set it, but is it worth it?

--- a/5-pwd/main.css
+++ b/5-pwd/main.css
@@ -10,9 +10,9 @@ main {
 }
 .launchbar {
     position: absolute;
-    top: 880px;
+    bottom: 0;
     left: 0;
-    height: 30px;
+    /*height: 30px;*/
     border-top: 10px solid rgb(0, 0, 0);
     border-top: 10px solid rgba(0, 0, 0, 0.25);
     width: 100%;
@@ -26,7 +26,7 @@ main {
     top: 0;
     left: 0;
     width: 100%;
-    height: 950px;
+    /*height: 950px*/
 }
 .icon {
     box-shadow: 5px 5px 10px 0;
